# osr-client

./: .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.test  PRD-MVP-FOUNDATION.md  README.md  client.toml  docker-compose.yml  justfile  osr_client.gdextension  project.godot
.claude/: settings.json
.claude/skills/implement-issue/: SKILL.md
.claude/skills/review-issue/: SKILL.md
.claude/skills/rust-sast/: .semgrep.yml  SKILL.md  rust-sast.sh
docs/: automation.md  human-e2e-test-plan-networking.md
docs/adr/: 0001-rust-godot-shell.md  0002-websocket-wss-jwt-auth.md  0003-containerized-mock-servers.md
docs/agents/: triage-labels.md
rust/: Cargo.toml
rust/certs/: cert.pem  key.pem
rust/src/: auth_server.rs  camera_controller.rs  client_auth.rs  config.rs  game_state.rs  jwt.rs  lib.rs  logging.rs  shared.rs
scenes/auth/: AuthScreen.tscn
scenes/character_select/: CharacterSelectScreen.tscn
scenes/shared/: LoadingScreen.tscn  Player.tscn
scenes/world/: EmptyRoom.tscn
scripts/: AuthScreen.gd  CharacterSelectScreen.gd  LoadingScreen.gd  Player.gd  e2e_auth.gd
scripts/autoloads/: GameState.gd
