[package]
name = "osr-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mock-server"
path = "src/bin/mock_server.rs"

[dependencies]
godot = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
rustls-pemfile = "2.0"
url = "2.5"
rustls = "0.22"
tokio-rustls = "0.25"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
